# Scopic-Contour-Test

./: .gitignore  CMakeLists.txt  README.md
inc/: Arc.h  Contour.h  Line.h  Segment.h
src/: Arc.cpp  Contour.cpp  Line.cpp  Segment.cpp  main.cpp
test/: CMakeLists.txt  contour_test.cpp
